--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,9 @@
 	<head>
 	</head>
 	<body>
+		<header>
+			<img style="width: 300px; height: 80px;" src="/img/logo.png" alt="Meadowlark Travel Logo">
+		</header>
 		{{{body}}}
 	</body>
 </html>
