--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,3 +1,4 @@
 <h1>About Meadowlark Travel</h1>
 <p>Твое предсказание на сегодня:</p>
 <blockquote>{{fortune}}</blockquote>
+<a href="/contacts">Contacts</a>
