--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,20 +3,20 @@
 	<head>
 		<title>Meadowlark Travel</title>
 		{{#if showTests}}
-			<link rel="stylesheet" href="vendor/mocha.css">
+			<link rel="stylesheet" href="/vendor/mocha.css">
 		{{/if}}
 		<script src="//code.jquery.com/jquery-2.0.2.min.js"></script>
 	</head>
 	<body>
 		<header>
-			<img style="width: 300px; height: 80px;" src="/img/logo.png" alt="Meadowlark Travel Logo">
+			<img style="width: 400px; height: 80px;" src="/img/logo.png" alt="Meadowlark Travel Logo">
 		</header>
 		{{{body}}}
 
 		{{#if showTests}}
 			<div id="mocha"></div>
-			<script src="vendor/mocha.js"></script>
-			<script src="vendor/chai.js"></script>
+			<script src="/vendor/mocha.js"></script>
+			<script src="/vendor/chai.js"></script>
 			<script>
 				mocha.ui('tdd');
 				var assert = chai.assert;
@@ -25,9 +25,7 @@
 			{{#if pageTestScript}}
 				<script src="{{pageTestScript}}"></script>
 			{{/if}}
-			<script>
-				mocha.run();
-			</script>
+			<script>mocha.run();</script>
 		{{/if}}
 	</body>
 </html>
